--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "grunt": "^0.4.5",
     "grunt-contrib-csslint": "^0.4.0",
     "grunt-contrib-jshint": "^0.11.1"
+  },
+  "dependencies": {
+    "grunt": "^0.4.5"
   }
 }
